# MeteOrb

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
data/ephemerides/: ESA0MGNFIN_20220320000_01D_05M_ORB.SP3  ESA0MGNFIN_20220600000_01D_05M_ORB.SP3  ESA0MGNFIN_20220910000_01D_05M_ORB.SP3  ESA0MGNFIN_20221210000_01D_05M_ORB.SP3  ESA0MGNFIN_20221520000_01D_05M_ORB.SP3  ESA0MGNFIN_20221820000_01D_05M_ORB.SP3  ESA0MGNFIN_20222130000_01D_05M_ORB.SP3  ESA0MGNFIN_20222440000_01D_05M_ORB.SP3  ESA0MGNFIN_20222740000_01D_05M_ORB.SP3  ESA0MGNFIN_20223050000_01D_05M_ORB.SP3  ESA0MGNFIN_20223350000_01D_05M_ORB.SP3  ESA0MGNFIN_20231300000_01D_05M_ORB.SP3
data/navigational/: MIL200ITA_R_20220320000_01D_MN.rnx  MIL200ITA_R_20220600000_01D_MN.rnx  MIL200ITA_R_20220910000_01D_MN.rnx  MIL200ITA_R_20221210000_01D_MN.rnx  MIL200ITA_R_20221520000_01D_MN.rnx  MIL200ITA_R_20221820000_01D_MN.rnx  MIL200ITA_R_20222130000_01D_MN.rnx  MIL200ITA_R_20222440000_01D_MN.rnx  MIL200ITA_R_20222740000_01D_MN.rnx  MIL200ITA_R_20223050000_01D_MN.rnx  MIL200ITA_R_20223350000_01D_MN.rnx  MIL200ITA_R_20231300000_01D_MN.rnx
data/satellite_atmo/: az.csv  coord.csv  el.csv  ionoparams.csv  sow.csv  time.csv
output/ATMO/: sd_Klobuchar.csv  zim_3_gmfh.csv  zim_3_gmfw.csv  zim_3_ionoMf.csv  zim_Saast.csv  zim_gmfh.csv  zim_gmfw.csv  zim_ionoMf.csv
output/CNFRT/: E01_EPH.csv  E01_EPH_jan.csv  E01_NAV.csv  E01_NAV_jan.csv  E04_EPH_jul.csv  E04_NAV_jul.csv  E07_EPH_mar.csv  E07_NAV_mar.csv  E08_EPH_may.csv  E08_NAV_may.csv  (+18 more)
scripts/: conf_atmo.cpp  core.cpp  main.cpp  velocityTest.cpp
(+27 files in other folders)
